syntax = "proto3";

package lesson;

option go_package = "github.com/calmato/shs-web/api/proto/lesson";

message Lesson {
  int64  id               = 1;
  int64  shift_summary_id = 2;
  int64  shift_id         = 3;
  int64  subject_id       = 4;
  int32  room_id          = 5;
  string teacher_id       = 6;
  string student_id       = 7;
  string notes            = 8;
  int64  created_at       = 9;
  int64  updated_at       = 10;
}
